renamed to bibfrog

--- a/src/main/resources/templates/inpro.html
+++ b/src/main/resources/templates/inpro.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>NimetonSammakko</title>
+        <title>BibFrog</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/css/Registration-Form-with-Photo.css"/>
         <link rel="stylesheet" href="/css/styles.css"/>
