--- a/src/main/resources/templates/inpro.html
+++ b/src/main/resources/templates/inpro.html
@@ -14,23 +14,32 @@
         <div class="register-photo">
             <div class="form-container">
                 <div class="image-holder"></div>
-                <form method="post">
+                <form method="post" th:object="${inproceeding}">
                     <h2 class="text-center"><strong>Create</strong> an inproceeding.</h2>
 
                     <div class="form-group">
-                        <input class="form-control" type="text" name="title" placeholder="Title" />
+                        <label class="lbl">Title:<input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Results from a Three-Year Transition to the Extreme Apprenticeship Method" /></label>
+                        <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="year" placeholder="Year" />
+                        <label class="lbl">Book Title:<input class="form-control" type="text" th:field="*{bookTitle}" name="bookTitle" placeholder=" Advanced Learning Technologies, ICALT" /></label>
+                        <a th:if="${#fields.hasErrors('bookTitle')}" th:errors="*{bookTitle}">booktitle errors</a>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="authors" placeholder="Authors (separated with commas)" />
+                        <label class="lbl">Year:<input class="form-control" type="number" id="year" name="year" placeholder="2013" /></label>
+                        <a th:if="${#fields.hasErrors('year')}" th:errors="*{year}">year errors</a>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="publisher" placeholder="Publisher" />
+                        <label class="lbl">Authors:<input class="form-control" type="text" th:field="*{givenAuthors}" name="authors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
+                        <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="address" placeholder="Address" />
+                        <label class="lbl">Publisher:<input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE (optional)" /></label>
+                        <a th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}">publisher errors</a>
+                    </div>
+                    <div class="form-group">
+                        <label class="lbl">Address:<input class="form-control" type="text" th:field="*{address}" name="address" placeholder="Beijing, China (optional)" /></label>
+                        <a th:if="${#fields.hasErrors('address')}" th:errors="*{address}">address errors</a>
                         <div class="form-group">
                             <button class="btn btn-primary btn-block" type="submit">Add</button>
                         </div>
@@ -38,8 +47,8 @@
                 </form>
             </div>
         </div>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
     </body>
 
 </html>
