navigation bar, and thymeleaf base/fragment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,14 +4,36 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:include="index :: base">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:fragment="base">
 
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=0.5"/>
+        <title>BibFrog</title>
+        <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="/css/Navigation-Clean1.css"/>
+        <link rel="stylesheet" href="/css/Registration-Form-with-Photo.css"/>
+        <link rel="stylesheet" href="/css/styles.css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <nav class="navbar navbar-default navigation-clean">
+                <div class="container">
+                    <div class="navbar-header"><a th:href="@{/}" class="navbar-brand navbar-link">BibFrog </a>
+                        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li role="presentation"><a th:href="@{/}">Inproceedings</a></li>
+                            <li role="presentation"><a th:href="@{/}">Books</a></li>
+                            <li role="presentation"><a th:href="@{/}">Articles</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div th:include="this :: content"/>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
     </body>
 </html>
