--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:include="index :: base">
     <head>
         <title>BibFrog</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-            <h2>Inproceedings</h2>
-            <ul>
-                <li th:each="inpro : ${inproList}">
-                    <b th:text="${inpro}">inpro</b>
-                </li>
-            </ul>
-
+        <div th:fragment="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Inproceedings</h2>
+                        <ul>
+                            <li th:each="inpro : ${inproList}">
+                                <b th:text="${inpro}">inpro</b>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
