--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,8 +24,8 @@ and open the template in the editor.
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li role="presentation"><a th:href="@{/}">Inproceedings</a></li>
-                            <li role="presentation"><a th:href="@{/}">Books</a></li>
+                            <li role="presentation"><a th:href="@{/inpros}">Inproceedings</a></li>
+                            <li role="presentation"><a th:href="@{/books}">Books</a></li>
                             <li role="presentation"><a th:href="@{/}">Articles</a></li>
                         </ul>
                     </div>
