--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -16,7 +16,7 @@
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author<input class="form-control" type="text" th:field="*{author}" name="author" placeholder="William Stallings" /></label>
+                            <label class="lbl">Author:<input class="form-control" type="text" th:field="*{author}" name="author" placeholder="William Stallings" /></label>
                             <a th:if="${#fields.hasErrors('author')}" th:errors="*{author}">author errors</a>
                         </div>
                         <div class="form-group">
@@ -28,7 +28,7 @@
                             <a th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}">publisher errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Edition:<input class="form-control" type="number" th:field="*{edition}" name="edition" placeholder="7th" /></label>
+                            <label class="lbl">Edition:<input class="form-control" type="number" th:field="*{edition}" name="edition" placeholder="7" /></label>
                             <a th:if="${#fields.hasErrors('edition')}" th:errors="*{edition}">edition errors</a>
                         </div>
                         <div class="form-group">
