finished articles back and front

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@ and open the template in the editor.
                         <ul class="nav navbar-nav navbar-right">
                             <li role="presentation"><a th:href="@{/inpros}">Inproceedings</a></li>
                             <li role="presentation"><a th:href="@{/books}">Books</a></li>
-                            <li role="presentation"><a th:href="@{/}">Articles</a></li>
+                            <li role="presentation"><a th:href="@{/articles}">Articles</a></li>
                         </ul>
                     </div>
                 </div>
