--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,17 +11,17 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Articles</h3>
-                                <p class="description">Create and manage article references</p><a th:href="@{/article/add}" class="learn-more">Create »</a></div>
+                                <p class="description">Create and manage article references</p><a th:href="@{/article/add}" class="learn-more" name='createArticle'>Create »</a></div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Books</h3>
-                                <p class="description">Create and manage book references</p><a th:href="@{/book/add}" class="learn-more">Create »</a></div>
+                                <p class="description">Create and manage book references</p><a th:href="@{/book/add}" class="learn-more" name='createBook'>Create »</a></div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Inproceedings</h3>
-                                <p class="description">Create and manage inproceeding references</p><a th:href="@{/inpro/add}" class="learn-more">Create »</a></div>
+                                <p class="description">Create and manage inproceeding references</p><a th:href="@{/inpro/add}" class="learn-more" name='createInproceeding'>Create »</a></div>
                         </div>
                     </div>
                 </div>
