--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -36,6 +36,10 @@
                             <a th:if="${#fields.hasErrors('volume')}" th:errors="*{volume}">volume errors</a>
                         </div>
                         <div class="form-group">
+                            <label class="lbl">Pages:<input class="form-control" type="text" th:field="*{pages}" name="pages" placeholder="1-2 (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('pages')}" th:errors="*{pages}">pages errors</a>
+                        </div>
+                        <div class="form-group">
                             <label class="lbl">Series:<input class="form-control" type="text" th:field="*{series}" name="series" placeholder="Name of the set of Books (optional)" /></label>
                             <a th:if="${#fields.hasErrors('series')}" th:errors="*{series}">series errors</a>
                         </div>
