listing created for books and articles

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -9,11 +9,34 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Books</h2>
-                        <ul>
-                            <li th:each="book : ${bookList}">
-                                <b th:text="${book}">book</b>
-                            </li>
-                        </ul>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <td>Title</td>
+                                        <td>Author</td>
+                                        <td>Publisher</td>
+                                        <td>Year</td>
+                                        <td style="text-align: right;">Write your filename</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="book : ${bookList}">
+                                        <td><b th:text="${book.title}">inpro</b></td>
+                                        <td><b th:text="${book.author}">inpro</b></td>
+                                        <td><b th:text="${book.publisher}">inpro</b></td>
+                                        <td><b th:text="${book.publishYear}">inpro</b></td>
+                                        <td><form id="downloadForm" th:action="@{book/{bookId}/download(bookId=${book.id})}" method="GET">
+                                                <div class="form-group">
+                                                <input class="form-control"  type="text" name="fileName" value="bibtex"/>
+                                                </div>
+                                                <input class="btn btn-success btn-block" type="submit" value="Download"/>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div> 
                     </div>
                 </div>
             </div>
