--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -15,6 +15,7 @@
                                     <tr>
                                         <td>Title</td>
                                         <td>Book title</td>
+                                        <td>Author</td>
                                         <td>Year</td>
                                         <td style="text-align: right;">Write your filename</td>
                                     </tr>
@@ -23,6 +24,7 @@
                                     <tr th:each="inpro : ${inproList}">
                                         <td><b th:text="${inpro.title}">inpro</b></td>
                                         <td><b th:text="${inpro.bookTitle}">inpro</b></td>
+                                        <td><b th:text="${inpro.authors[0]}">inpro</b></td>
                                         <td><b th:text="${inpro.publishYear}">inpro</b></td>
                                         <td><form id="downloadForm" th:action="@{inpro/{inproId}/download(inproId=${inpro.id})}" method="GET">
                                                 <div class="form-group">
