--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -9,11 +9,34 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Articles</h2>
-                        <ul>
-                            <li th:each="article : ${articleList}">
-                                <b th:text="${article}">article</b>
-                            </li>
-                        </ul>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <td>Title</td>
+                                        <td>Author</td>
+                                        <td>Journal</td>
+                                        <td>Year</td>
+                                        <td style="text-align: right;">Write your filename</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="article : ${articleList}">
+                                        <td><b th:text="${article.title}">article</b></td>
+                                        <td><b th:text="${article.author}">article</b></td>
+                                        <td><b th:text="${article.journal}">article</b></td>
+                                        <td><b th:text="${article.publishYear}">article</b></td>
+                                        <td><form id="downloadForm" th:action="@{article/{articleId}/download(articleId=${article.id})}" method="GET">
+                                                <div class="form-group">
+                                                    <input class="form-control"  type="text" name="fileName" value="bibtex"/>
+                                                </div>
+                                                <input class="btn btn-success btn-block" type="submit" value="Download"/>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div> 
                     </div>
                 </div>
             </div>
