--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -20,16 +20,12 @@
                             <a th:if="${#fields.hasErrors('author')}" th:errors="*{author}">author errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Year:<input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2013" /></label>
-                            <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
-                        </div>
-                        <div class="form-group">
-                            <label class="lbl">Publisher:<input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE (optional)" /></label>
+                            <label class="lbl">Publisher:<input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE" /></label>
                             <a th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}">publisher errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Edition:<input class="form-control" type="number" th:field="*{edition}" name="edition" placeholder="7" /></label>
-                            <a th:if="${#fields.hasErrors('edition')}" th:errors="*{edition}">edition errors</a>
+                            <label class="lbl">Year:<input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2013" /></label>
+                            <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Volume:<input class="form-control" type="number" th:field="*{volume}" name="volume" placeholder="7" /></label>
@@ -40,16 +36,20 @@
                             <a th:if="${#fields.hasErrors('series')}" th:errors="*{series}">series errors</a>
                         </div>
                         <div class="form-group">
+                            <label class="lbl">Address:<input class="form-control" type="text" th:field="*{address}" name="address" placeholder="Piscataway, NJ 08854-4141 USA (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('address')}" th:errors="*{address}">address errors</a>
+                        </div>
+                        <div class="form-group">
+                            <label class="lbl">Edition:<input class="form-control" type="number" th:field="*{edition}" name="edition" placeholder="7" /></label>
+                            <a th:if="${#fields.hasErrors('edition')}" th:errors="*{edition}">edition errors</a>
+                        </div>
+                        <div class="form-group">
                             <label class="lbl">Month:<input class="form-control" type="number" th:field="*{publishMonth}" name="publishMonth" placeholder="7" /></label>
                             <a th:if="${#fields.hasErrors('publishMonth')}" th:errors="*{publishMont}">month errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Note:<input class="form-control" type="text" th:field="*{note}" name="note" placeholder="Additional notes (optional)" /></label>
                             <a th:if="${#fields.hasErrors('note')}" th:errors="*{note}">note errors</a>
-                        </div>
-                        <div class="form-group">
-                            <label class="lbl">Address:<input class="form-control" type="text" th:field="*{address}" name="address" placeholder="Piscataway, NJ 08854-4141 USA (optional)" /></label>
-                            <a th:if="${#fields.hasErrors('address')}" th:errors="*{address}">address errors</a>
                             <div class="form-group">
                                 <button class="btn btn-primary btn-block" type="submit">Add</button>
                             </div>
