--- a/src/main/resources/templates/inpro.html
+++ b/src/main/resources/templates/inpro.html
@@ -20,16 +20,16 @@
                             <a th:if="${#fields.hasErrors('bookTitle')}" th:errors="*{bookTitle}">booktitle errors</a>
                         </div>
                         <div class="form-group">
+                            <label class="lbl">Author(s):<input class="form-control" type="text" th:field="*{givenAuthors}" name="authors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
+                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
+                        </div>
+                        <div class="form-group">
                             <label class="lbl">Year:<input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2013" /></label>
                             <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Authors:<input class="form-control" type="text" th:field="*{givenAuthors}" name="authors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
-                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
-                        </div>
-                        <div class="form-group">
-                            <label class="lbl">Publisher:<input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE (optional)" /></label>
-                            <a th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}">publisher errors</a>
+                            <label class="lbl">Editor:<input class="form-control" type="text" th:field="*{editor}" name="editor" placeholder="Name of the editor (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Volume:<input class="form-control" type="number" th:field="*{volume}" name="volume" placeholder="1" /></label>
@@ -40,24 +40,28 @@
                             <a th:if="${#fields.hasErrors('series')}" th:errors="*{series}">series errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Organization:<input class="form-control" type="text" th:field="*{organization}" name="organization" placeholder="Sponsors (optional)" /></label>
-                            <a th:if="${#fields.hasErrors('edition')}" th:errors="*{edition}">edition errors</a>
+                            <label class="lbl">Pages:<input class="form-control" type="text" th:field="*{pages}" name="pages" placeholder="1-2 (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('pages')}" th:errors="*{pages}">page errors</a>
+                        </div>
+                        <div class="form-group">
+                            <label class="lbl">Address:<input class="form-control" type="text" th:field="*{address}" name="address" placeholder="Piscataway, NJ 08854-4141 USA (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('address')}" th:errors="*{address}">address errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Month:<input class="form-control" type="number" th:field="*{publishMonth}" name="publishMonth" placeholder="1" /></label>
                             <a th:if="${#fields.hasErrors('publishMonth')}" th:errors="*{publishMonth}">Month errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Pages:<input class="form-control" type="text" th:field="*{pages}" name="pages" placeholder="1-2" /></label>
-                            <a th:if="${#fields.hasErrors('pages')}" th:errors="*{pages}">page errors</a>
+                            <label class="lbl">Organization:<input class="form-control" type="text" th:field="*{organization}" name="organization" placeholder="Sponsors (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('organization')}" th:errors="*{organization}">organization errors</a>
+                        </div>
+                        <div class="form-group">
+                            <label class="lbl">Publisher:<input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}">publisher errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Note:<input class="form-control" type="text" th:field="*{note}" name="note" placeholder="Additional notes (optional)" /></label>
-                            <a th:if="${#fields.hasErrors('volume')}" th:errors="*{volume}">volume errors</a>
-                        </div>
-                        <div class="form-group">
-                            <label class="lbl">Address:<input class="form-control" type="text" th:field="*{address}" name="address" placeholder="Piscataway, NJ 08854-4141 USA (optional)" /></label>
-                            <a th:if="${#fields.hasErrors('address')}" th:errors="*{address}">address errors</a>
+                            <a th:if="${#fields.hasErrors('note')}" th:errors="*{note}">note errors</a>
                             <div class="form-group">
                                 <button class="btn btn-primary btn-block" type="submit">Add</button>
                             </div>
