--- a/src/main/resources/templates/inpro.html
+++ b/src/main/resources/templates/inpro.html
@@ -28,6 +28,10 @@
                             <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
                         </div>
                         <div class="form-group">
+                            <label class="lbl">Reference key:<input class="form-control" type="text" th:field="*{referenceKey}" name="referenceKey" placeholder="Reference key (optional)" /></label>
+                            <a th:if="${#fields.hasErrors('referenceKey')}" th:errors="*{referenceKey}">Reference key errors</a>
+                        </div>
+                        <div class="form-group">
                             <label class="lbl">Editor:<input class="form-control" type="text" th:field="*{editor}" name="editor" placeholder="Name of the editor (optional)" /></label>
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
