--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -16,8 +16,8 @@
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author:<input class="form-control" type="text" th:field="*{author}" name="author" placeholder="William Stallings" /></label>
-                            <a th:if="${#fields.hasErrors('author')}" th:errors="*{author}">author errors</a>
+                            <label class="lbl">Author(s):<input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="William Stallings" /></label>
+                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Journal:<input class="form-control" type="text" th:field="*{journal}" name="journal" placeholder="Journal" /></label>
