--- a/src/main/resources/templates/inpro.html
+++ b/src/main/resources/templates/inpro.html
@@ -20,7 +20,7 @@
                             <a th:if="${#fields.hasErrors('bookTitle')}" th:errors="*{bookTitle}">booktitle errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author(s):<input class="form-control" type="text" th:field="*{givenAuthors}" name="authors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
+                            <label class="lbl">Author(s):<input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
                             <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
                         </div>
                         <div class="form-group">
