--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,13 +14,19 @@ and open the template in the editor.
         <link rel="stylesheet" href="/css/Navigation-Clean1.css"/>
         <link rel="stylesheet" href="/css/Registration-Form-with-Photo.css"/>
         <link rel="stylesheet" href="/css/styles.css"/>
+        <link rel="icon" 
+              type="image/ico" 
+              href="/img/favicon.ico"/>
     </head>
     <body>
         <div>
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container">
                     <div class="navbar-header"><a th:href="@{/}" class="navbar-brand navbar-link">BibFrog </a>
-                        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span><span class="icon-bar"></span>
+                            <span class="icon-bar"></span></button>
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right">
